do-some-changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <textarea id="input" cols="40" rows="4" placeholder="Enter any sentence in english" ></textarea>
     <button id="btn-id">CONVERT</button>
     <label>👇 Here you'll get Translation 👇</label>
-    <textarea id="output" cols="50" rows="2" placeholder="Here you will get the Translation" ></textarea>
+    <output id="output"> </output>
     
     <script src="script.js"></script>
 </body>
